# iqotw

./: CHANGELOG.md  Cargo.toml  Justfile  README.md  project.clj
.calva/output-window/: output.calva-repl
.lsp/: sqlite.db
benches/: benchmark.rs  random-1000.txt
doc/: intro.md
src/: lib.rs  main.rs
src/iqotw/2021/: week35.clj
src/y22/: capitalization.rs  doors.rs  feb13.rs  feb20.rs  fib_like.rs  mar7.rs  may2.rs  mod.rs  ordinal.rs  previous_fibonacci.rs  truncate.rs
src/y23/: dice.rs
test/iqotw/2021/: week35_test.clj
