[package]
edition = "2021"
name = "iqotw"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
test-case = "2.2.2"

[dev-dependencies]
criterion = {version = "0.3", features = ["html_reports"]}

[[bench]]
harness = false
name = "benchmark"
