[package]
edition = "2021"
name = "iqotw"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
test-case = "3.0.0"

[dev-dependencies]
criterion = {version = "0.3", features = ["html_reports"]}

[[bench]]
harness = false
name = "benchmark"
